--- a/src/components/ListPage/movie.css
+++ b/src/components/ListPage/movie.css
@@ -8,10 +8,14 @@
 }
 
 .movie-card {
+    display: flex;
     cursor: pointer;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .movie-card:hover {
     transform: scale(1.1);
     transition: transform 0.3s ease-in-out;
+    overflow: hidden;
 }
